Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25880

Deploy with CMake configuration does not make sense

    XMLWordPrintable

Details

    • All
    • a0afd51f3 (master)

    Description

      In Projects tab > Build & Run settings > Run SettingsĀ > Deployment section, adding CMake build as a deploy step sometimes successfully shows a list of available targets (sometimes it doesn't) with pre-selected install target and a text field for extra CMake arguments.

      The problem is, extra CMake arguments are appended to the end of the command line invocation, after --target install, so they are treated verbatim as targets names.

      This CMake deployment should be reworked in two steps:
      1. Don't append arguments after --target option, put them right before it.
      2. Don't run --target install at all: there's a built-in --install command with --prefix and other good stuff.

      https://cmake.org/cmake/help/latest/manual/cmake.1.html#install-a-project

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            cadam Cristian Adam
            ratijas ivan tkachenko
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes